# slack-export-viewer

./: .gitignore  .travis.yml  CONTRIBUTE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  app.py  cli.py  config.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  slackviewer.py  wsgi.py
.github/workflows/: ci.yml  release.yml
scripts/: generate_changelog.py  update_version.py
slackviewer/: __init__.py  app.py  archive.py  cli.py  config.py  constants.py  formatter.py  freezer.py  main.py  message.py  reader.py  user.py  wsgi.py
slackviewer/static/: 404.css  upload.css  viewer.css
slackviewer/templates/: 404.html  example_template_single_export.html  export_single.html  upload.html  util.html  viewer.css  viewer.html
slackviewer/utils/: click.py  six.py
static/: archive.css  viewer.css
templates/: archive.html  viewer.html
tests/: test_archive.py
